objects/Error_Log__c.object
<CustomObject>
    <description>Object for error logs in the app</description>
    <fields>
        <fullName>Log_Date_Tile__c</fullName>
        <description>Date &amp; Time details when the Error Occurred</description>
        <label>Log Date/Tile</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <description>Stores the Complete Stack Track about the Problem</description>
        <label>Log Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <description>Auto Generated Number for error logs</description>
        <displayFormat>Error#-{0000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>The Name of Either Apex Class or Apex Trigger</description>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>